--- a/app/views/mads_conference_names/edit.html.erb
+++ b/app/views/mads_conference_names/edit.html.erb
@@ -1,5 +1,12 @@
 <% @page_title =  "Edit Conference Name" %>
+<script type="text/javascript">
 
+$(document).ready(function(){
+
+  getMultiAutoCompleteList("ConferenceName");
+
+});
+</script>
 <div class="row-fluid">
 	<div class="span10 offset1">
 	
