--- a/app/views/mads_temporals/edit.html.erb
+++ b/app/views/mads_temporals/edit.html.erb
@@ -3,10 +3,7 @@
 
 $(document).ready(function(){
 
-  getMultiAutoCompleteList("Topic");
-
-  // getAutocompleteItem();     
-
+  getMultiAutoCompleteList("Temporal");
 
 });
 </script>
@@ -31,8 +28,7 @@ $(document).ready(function(){
 		        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
 		      <% end %>
 	        <%= f.fields_for :temporalElement do |te| %>
-	         	<%= te.label :elementValue, "Element Value" %>
-	        	<%= te.text_field :elementValue, class: "typeahead" %>
+	         	<%= te.hidden_field :elementValue, class: "eleTypeahead" %>
 	        <% end %>
 			</div>			
 			<div class="form-actions">
