--- a/app/views/dams_iconographies/edit.html.erb
+++ b/app/views/dams_iconographies/edit.html.erb
@@ -1,5 +1,12 @@
 <% @page_title =  "Edit Iconography" %>
+<script type="text/javascript">
 
+$(document).ready(function(){
+
+  getMultiAutoCompleteList("Iconography");
+
+});
+</script>
 <div class="row-fluid">
 	<div class="span10 offset1">
 	
@@ -10,7 +17,7 @@
 			<%= render 'error_messages', object: f.object %>
 		
 			<%= label_tag 'dams_iconography[name][]', "Name" %>
-			<%= text_field_tag 'dams_iconography[name][]', @dams_iconography.name[0], class: "input-block-level" %>
+			<%= text_field_tag 'dams_iconography[name][]', @dams_iconography.name[0], class: "typeahead" %>
 		
 			<%= label_tag 'dams_iconography[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_iconography[externalAuthority][]', @dams_iconography.externalAuthority, class: "input-block-level" %>
@@ -20,8 +27,7 @@
 	        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
 	      <% end %>
 	      <%= f.fields_for :iconographyElement do |te| %>
-	        <%= te.label :elementValue, "Element Value" %>
-	        <%= te.text_field :elementValue, class: "input-block-level" %>
+	        <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
 	      <% end %>
 							
 			<div class="form-actions">
