--- a/app/views/shared/fields/_related_resource.html.erb
+++ b/app/views/shared/fields/_related_resource.html.erb
@@ -8,50 +8,114 @@
 		 htmlOpen = "<dt>%s</dt><dd><ul class='unstyled'>"
 		 htmlClose = "</ul></dd>"
 	 end
-
 	 fieldData = collectionDoc["#{prefix}related_resource_json_tesim"]
 
 	 if fieldData != nil	
 	 	needLabel = "false"
-	 	fieldData.each do |datum|
+	 		fieldData.each do |datum|
 			relatedResource = JSON.parse(datum)
 			if !relatedResource['description'].blank? && relatedResource['type'] != "hydra-afmodel"
 				needLabel = "true"
-			end
-			if docType == "object" && !@collectionDocArray.nil? && @collectionDocArray.size > 0
-				needLabel = "false"
-			end			
+			end	
 		end
- 		
- 		if(needLabel == "true")
-		 	htmlOpen %= 'Related Resource'.pluralize(fieldData.count)
-			concat htmlOpen.html_safe
-		end
-					 
+
+	types = Hash.new
+	types.compare_by_identity
 		 fieldData.each do |datum|
 			 relatedResource = JSON.parse(datum)
 			 if !relatedResource['description'].blank? && relatedResource['type'] != "hydra-afmodel"
-             	if relatedResource['type'] != 'thumbnail'
-%>
-					<p>
+          if relatedResource['type'] != 'thumbnail'
+          	# add link information as value to hashmap
+          	curr = [relatedResource['description'], relatedResource['uri']]
+						types[relatedResource['type']] = curr
+					end
+			end
+		end 
+		if !@collectionDocArray.nil? && @collectionDocArray.size > 0
+		@collectionDocArray.each do |colDoc|
+	 		fieldData = colDoc["#{prefix}related_resource_json_tesim"]
+	 		fieldData.each do |datum|
+			 relatedResource = JSON.parse(datum)
+			 if !relatedResource['description'].blank? && relatedResource['type'] != "hydra-afmodel"
+          if relatedResource['type'] != 'thumbnail'
+          	# add link information as value to hashmap
+          	curr = [relatedResource['description'], relatedResource['uri']]
+						types[relatedResource['type']] = curr
+						needLabel == "true"
+					end
+			end
+		end 
+	end
+		end
+		count = 0
+		types.each do |c|
+			count += 1
+		end
+		if(needLabel == "true")
+		 	htmlOpen %= 'Related Resource'.pluralize(count)
+			concat htmlOpen.html_safe
+		end
+		prevkey = ''
+		types.each do |key, value|
+			if prevkey.blank?
+				prevkey = key
+				# first key
+			%>
+				<p>
+					<strong>
+						<% if key != nil && !key.blank? %>
+						<%= key %>
+						<ul>
+						<% else %>
+						General Related Resource
+						<% end %>
+					</strong>
+				</p>
+				<li><%= link_to value[0], value[1]%></li>
+				</p>
+<%
+			elsif prevkey == key
+				# display rr, header exists already
+		%>
+				<p>
 						<strong>
-							<% if relatedResource['type'] != nil && !relatedResource['type'].blank? %>
-							<%= relatedResource['type'] %>
+							<% if key != nil && !key.blank? %>
 							<% else %>
 							General Related Resource
 							<% end %>
 						</strong>
 					</p>
-					<li><%= link_to relatedResource['description'], relatedResource['uri'] %></li>
+					<li><%= link_to value[0], value[1]%></li>
 					</p>
 <%
-      			end
-      		end
-	 	end
+			else
+				# Case that key is different now (different related resource type)
+				prevkey = key
+				%>
+			</ul>
+					<p>
+						<strong>
+							<% if key != nil && !key.blank? %>
+							<%= key %>
+							<ul>
+							<% else %>
+							General Related Resource
+							<% end %>
+						</strong>
+					</p>
+					<li><%= link_to value[0], value[1]%></li>
+					</p>
+<%
+			end
+		end
+			%>
+		</ul>
+			<%
 
-	 	if(needLabel == "true")
-	 		concat htmlClose.html_safe
+if(needLabel == "true")
+	 	concat htmlClose.html_safe
 	 	end
+	end
 
-	 end
+
 %>
