Fixing typeahead css. (DHH-427)

--- a/app/assets/stylesheets/custom-edit.css.scss
+++ b/app/assets/stylesheets/custom-edit.css.scss
@@ -1,5 +1,9 @@
 $viewerPadding: 3% !default;
 
+.typeahead.tt-input {
+   width: 396px; 
+}
+
 #scrollable-dropdown-menu .tt-dropdown-menu {
   max-height: 150px;
   overflow-y: auto;
