--- a/app/views/dams_units/index.html.erb
+++ b/app/views/dams_units/index.html.erb
@@ -31,7 +31,7 @@
   <div class="category">
     <h3>UCSD Research Data Collections</h3>
     <%#= link_to '<span class="visually-hidden">UCSD Research Data Collections</span>'.html_safe, dams_unit_collections_path('rci'), :class => 'cat-rci' %>
-    <%= link_to '<span class="visually-hidden">UCSD Research Data Collections</span>'.html_safe, facet_uri('Research Data Curation Program','unit_sim'), :class => 'cat-rci' %>
+    <%= link_to '<span class="visually-hidden">UCSD Research Data Collections</span>'.html_safe, facet_uri('UCSD Research Data Collections','unit_sim'), :class => 'cat-rci' %>
     <p>Research data gathered by campus researchers as part of a campus-wide Research Cyberinfrastructure initiative</p>
   </div>
   <p class="invitation">Currently totaling <%= number_with_delimiter(@count_resp.total_count) %> images, audio recordings, videos, documents, and data sets, we continue to add items over time, and we invite you to search or browse these collections for research or educational purposes.</p>
