--- a/app/views/mads_occupations/new.html.erb
+++ b/app/views/mads_occupations/new.html.erb
@@ -1,13 +1,23 @@
+<script type="text/javascript">
+
+$(document).ready(function(){
+  getSingleAutoCompleteList();
+});
+
+</script>
+
 <h1>Create a new MADS Occupation</h1>
 <%= form_for @mads_occupation do |f| %>
 	<%= render 'error_messages' %>
+
+  <div id="subjectField">
   <%= label_tag 'mads_occupation[name]', "Name" %>
-  <%= text_field_tag 'mads_occupation[name]', '', required: true, class: "input-block-level" %>
+  <%= text_field_tag 'mads_occupation[name]', '', required: true, class: "typeahead" %>
+</div>
   <%= label_tag 'mads_occupation[externalAuthority]', "ExternalAuthority" %>
   <%= url_field_tag 'mads_occupation[externalAuthority]', '', class: "input-block-level" %> 
    <%= f.fields_for :occupationElement do |te| %>
-    <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
