--- a/app/views/dams_built_work_places/new.html.erb
+++ b/app/views/dams_built_work_places/new.html.erb
@@ -1,14 +1,26 @@
+
+<script type="text/javascript">
+
+$(document).ready(function(){
+  getSingleAutoCompleteList();
+});
+
+</script>
+
 <h1>Create a new Dams BuiltWorkPlace</h1>
 <%= form_for @dams_built_work_place do |f| %>
 	<%= render 'error_messages' %>
+
+<div id="subjectField">
   <%= label_tag 'dams_built_work_place[name]', "Name" %>
-  <%= text_field_tag 'dams_built_work_place[name]', '', required: true, class: "input-block-level" %>
+  <%= text_field_tag 'dams_built_work_place[name]', '', required: true, class: "typeahead" %>
+</div>
+
   <%= label_tag 'dams_built_work_place[externalAuthority]', "ExternalAuthority" %>
   <%= url_field_tag 'dams_built_work_place[externalAuthority]','' , class: "input-block-level" %> 
   
   <%= f.fields_for :builtWorkPlaceElement do |te| %>
-    <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
