--- a/app/views/dams_cultural_contexts/new.html.erb
+++ b/app/views/dams_cultural_contexts/new.html.erb
@@ -1,14 +1,25 @@
+<script type="text/javascript">
+
+$(document).ready(function(){
+  getSingleAutoCompleteList();
+});
+
+</script>
+
 <h1>Create a new DAMS Cultural Context</h1>
 <%= form_for @dams_cultural_context do |f| %>
   <%= render 'error_messages' %>
+
+  <div id="subjectField">
   <%= label_tag 'dams_cultural_context[name]', "Name" %>
-  <%= text_field_tag 'dams_cultural_context[name]', '', required: true , class: "input-block-level"%>
+  <%= text_field_tag 'dams_cultural_context[name]', '', required: true , class: "typeahead"%>
+  </div>
+  
   <%= label_tag 'dams_cultural_context[externalAuthority]', "ExternalAuthority" %>
   <%= url_field_tag 'dams_cultural_context[externalAuthority]', '', class: "input-block-level"%> 
 
   <%= f.fields_for :culturalContextElement do |te| %>
-    <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
