--- a/app/views/dams_functions/new.html.erb
+++ b/app/views/dams_functions/new.html.erb
@@ -1,13 +1,24 @@
+<script type="text/javascript">
+
+$(document).ready(function(){
+  getSingleAutoCompleteList();
+});
+
+</script>
+
 <h1>Create a new Dams Function</h1>
 <%= form_for @dams_function do |f| %>
 	<%= render 'error_messages' %>
+
+   <div id="subjectField">
   <%= label_tag 'dams_function[name]', "Name" %>
-  <%= text_field_tag 'dams_function[name]', '', required: true, class: "input-block-level"  %>
+  <%= text_field_tag 'dams_function[name]', '', required: true, class: "typeahead"  %>
+  </div>
+  
   <%= label_tag 'dams_function[externalAuthority]', "ExternalAuthority" %>
   <%= url_field_tag 'dams_function[externalAuthority]', '', class: "input-block-level" %> 
   <%= f.fields_for :functionElement do |te| %>
-    <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level"%>
+    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
