--- a/app/views/mads_geographics/new.html.erb
+++ b/app/views/mads_geographics/new.html.erb
@@ -1,13 +1,24 @@
+<script type="text/javascript">
+
+$(document).ready(function(){
+  getSingleAutoCompleteList();
+});
+
+</script>
+
 <h1>Create a new MADS Geographic</h1>
 <%= form_for @mads_geographic do |f| %>
 	<%= render 'error_messages' %>
+
+  <div id="subjectField">
   <%= label_tag 'mads_geographic[name]', "Name" %>
-  <%= text_field_tag 'mads_geographic[name]', '', required: true, class: "input-block-level" %>
+  <%= text_field_tag 'mads_geographic[name]', '', required: true, class: "typeahead" %>
+</div>
+
   <%= label_tag 'mads_geographic[externalAuthority]', "ExternalAuthority" %>
   <%= text_field_tag 'mads_geographic[externalAuthority]', '', class: "input-block-level" %>
   <%= f.fields_for :geographicElement do |te| %>
-    <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
