--- a/app/views/mads_topics/edit.html.erb
+++ b/app/views/mads_topics/edit.html.erb
@@ -35,7 +35,8 @@ $(document).ready(function(){
       
       <%= f.fields_for :topicElement do |te| %>
         
-        <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+        <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
       <% end %>
     
    
