--- a/app/views/mads_topics/new.html.erb
+++ b/app/views/mads_topics/new.html.erb
@@ -17,7 +17,8 @@ $(document).ready(function(){
   <%= url_field_tag 'mads_topic[externalAuthority]', '', class: "input-block-level"  %> 
 
   <%= f.fields_for :topicElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
