--- a/app/views/dams_cultural_contexts/new.html.erb
+++ b/app/views/dams_cultural_contexts/new.html.erb
@@ -19,7 +19,8 @@ $(document).ready(function(){
   <%= url_field_tag 'dams_cultural_context[externalAuthority]', '', class: "input-block-level"%> 
 
   <%= f.fields_for :culturalContextElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+    <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
