--- a/app/views/dams_functions/edit.html.erb
+++ b/app/views/dams_functions/edit.html.erb
@@ -16,10 +16,10 @@ $(document).ready(function(){
 		<%= form_for @dams_function do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
-		
+		  <div id="subjectField">
 			<%= label_tag 'dams_function[name][]', "Name" %>
 			<%= text_field_tag 'dams_function[name][]', @dams_function.name[0], class: "typeahead" %>
-		
+		  </div>
 			<%= label_tag 'dams_function[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_function[externalAuthority][]', @dams_function.externalAuthority, class: "input-block-level" %>
 
@@ -28,7 +28,8 @@ $(document).ready(function(){
             <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
         <% end %>
         <%= f.fields_for :functionElement do |te| %>
-            <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+            <%= te.label :elementValue, "Element Value" %>
+    <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
         <% end %>
 							
 			<div class="form-actions">
