--- a/app/views/dams_scientific_names/edit.html.erb
+++ b/app/views/dams_scientific_names/edit.html.erb
@@ -16,10 +16,10 @@ $(document).ready(function(){
 		<%= form_for @dams_scientific_name do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
-		
+		  <div id="subjectField">
 			<%= label_tag 'dams_scientific_name[name][]', "Name" %>
 			<%= text_field_tag 'dams_scientific_name[name][]', @dams_scientific_name.name[0], class: "typeahead" %>
-		
+		  </div>
 			<%= label_tag 'dams_scientific_name[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_scientific_name[externalAuthority][]', @dams_scientific_name.externalAuthority, class: "input-block-level" %>
 
@@ -28,7 +28,8 @@ $(document).ready(function(){
 	        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
 	      <% end %>
 	      <%= f.fields_for :scientificNameElement do |te| %>
-	        <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+	        <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
 	      <% end %>
 							
 			<div class="form-actions">
