--- a/app/views/dams_scientific_names/new.html.erb
+++ b/app/views/dams_scientific_names/new.html.erb
@@ -17,7 +17,8 @@ $(document).ready(function(){
   <%= url_field_tag 'dams_scientific_name[externalAuthority]', '', class: "input-block-level" %> 
   
   <%= f.fields_for :scientificNameElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
