--- a/app/views/dams_style_periods/new.html.erb
+++ b/app/views/dams_style_periods/new.html.erb
@@ -18,7 +18,8 @@ $(document).ready(function(){
   <%= url_field_tag 'dams_style_period[externalAuthority]', '', class: "input-block-level"  %> 
   
   <%= f.fields_for :stylePeriodElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
