--- a/app/views/dams_techniques/edit.html.erb
+++ b/app/views/dams_techniques/edit.html.erb
@@ -15,10 +15,10 @@ $(document).ready(function(){
 		<%= form_for @dams_technique do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
-		
+		  <div id="subjectField">
 			<%= label_tag 'dams_technique[name][]', "Name" %>
 			<%= text_field_tag 'dams_technique[name][]', @dams_technique.name[0], class: "typeahead" %>
-		
+		  </div>
 			<%= label_tag 'dams_technique[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_technique[externalAuthority][]', @dams_technique.externalAuthority, class: "input-block-level" %>
 
@@ -27,7 +27,8 @@ $(document).ready(function(){
 	        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
 	      <% end %>
 	      <%= f.fields_for :techniqueElement do |te| %>
-	        <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+	        <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
 	      <% end %>
 							
 			<div class="form-actions">
