--- a/app/views/mads_genre_forms/edit.html.erb
+++ b/app/views/mads_genre_forms/edit.html.erb
@@ -15,10 +15,10 @@ $(document).ready(function(){
 		<%= form_for @mads_genre_form do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
-		
+		  <div id="subjectField">
 			<%= label_tag 'mads_genre_form[name][]', "Name" %>
 			<%= text_field_tag 'mads_genre_form[name][]', @mads_genre_form.name[0], class: "typeahead" %>
-		
+		  </div>
 			<%= label_tag 'mads_genre_form[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'mads_genre_form[externalAuthority][]', @mads_genre_form.externalAuthority, class: "input-block-level" %>
 
@@ -27,7 +27,8 @@ $(document).ready(function(){
 		        <%= se.select :id, options_for_select(@mads_schemes , :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
 		    <% end %>
 		    <%= f.fields_for :genreFormElement do |te| %>
-		        <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+		        <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
 		    <% end %>
 				
 			<div class="form-actions">
