--- a/app/views/mads_genre_forms/new.html.erb
+++ b/app/views/mads_genre_forms/new.html.erb
@@ -16,7 +16,8 @@ $(document).ready(function(){
   <%= label_tag 'mads_genre_form[externalAuthority]', "ExternalAuthority" %>
   <%= url_field_tag 'mads_genre_form[externalAuthority]', '', class: "input-block-level" %> 
   <%= f.fields_for :genreFormElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+    <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
