--- a/app/views/mads_geographics/new.html.erb
+++ b/app/views/mads_geographics/new.html.erb
@@ -18,7 +18,8 @@ $(document).ready(function(){
   <%= label_tag 'mads_geographic[externalAuthority]', "ExternalAuthority" %>
   <%= text_field_tag 'mads_geographic[externalAuthority]', '', class: "input-block-level" %>
   <%= f.fields_for :geographicElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
