--- a/app/views/mads_occupations/new.html.erb
+++ b/app/views/mads_occupations/new.html.erb
@@ -17,7 +17,8 @@ $(document).ready(function(){
   <%= label_tag 'mads_occupation[externalAuthority]', "ExternalAuthority" %>
   <%= url_field_tag 'mads_occupation[externalAuthority]', '', class: "input-block-level" %> 
    <%= f.fields_for :occupationElement do |te| %>
-    <%= te.hidden_field :elementValue, class: "eleTypeahead" %>
+    <%= te.label :elementValue, "Element Value" %>
+            <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
