--- a/app/views/dams_units/index.html.erb
+++ b/app/views/dams_units/index.html.erb
@@ -13,6 +13,7 @@
       Or browse by
 	    <ul class="inline browse-by-list">
 	      <li><%= link_to 'Collection', dams_collections_path %></li>
+	      <li><%= link_to 'Creator', catalog_facet_path("creator_sim", :'facet.sort' => 'index') %></li>
 	      <li><%= link_to 'Format', catalog_facet_path("object_type_sim", :'facet.sort' => 'index') %></li>
 	      <li><%= link_to 'Topic', catalog_facet_path("subject_topic_sim", :'facet.sort' => 'index') %></li>
 	    </ul>
