--- a/app/views/dams_built_work_places/edit.html.erb
+++ b/app/views/dams_built_work_places/edit.html.erb
@@ -19,14 +19,11 @@ $(document).ready(function(){
 		  
 		  <div id="subjectField">
 			<%= label_tag 'dams_built_work_place[name][]', "Name" %>
-<<<<<<< HEAD
-			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "typeahead" %>
+
+			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "typeahead", required: true %>
 		  
 		  
-=======
-			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "input-block-level", required: true%>
-		
->>>>>>> develop
+
 			<%= label_tag 'dams_built_work_place[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_built_work_place[externalAuthority][]', @dams_built_work_place.externalAuthority, class: "input-block-level" %>
 
@@ -35,13 +32,10 @@ $(document).ready(function(){
 	        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" , :required=>true%>
 	      <% end %>
 	      <%= f.fields_for :builtWorkPlaceElement do |te| %>
-<<<<<<< HEAD
+
 	       <%= te.label :elementValue, "Element Value" %>
     <%= te.text_field :elementValue, class: "eleTypeahead", :required=>true %>
-=======
-	        <%= te.label :elementValue, "Element Value" %>
-	        <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
->>>>>>> develop
+
 	      <% end %>
 				</div>			
 			<div class="form-actions">
