--- a/app/views/get_data/get_subject.html.erb
+++ b/app/views/get_data/get_subject.html.erb
@@ -1,9 +1,9 @@
 <%#= select_tag "#{@formType}[#{@fieldName}][]", options_for_select(@subjects) , :prompt=>"Select #{@label}" %>	
 <%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
 
-<script src="/assets/jquery.js" type="text/javascript"></script>
-<script src="/assets/typeahead.bundle.js" type="text/javascript"></script>
-<script src="/assets/edit.js" type="text/javascript"></script>
+<script src="/dc/assets/jquery.js" type="text/javascript"></script>
+<script src="/dc/assets/typeahead.bundle.js" type="text/javascript"></script>
+<script src="/dc/assets/edit.js" type="text/javascript"></script>
 
 
 <% if !@fieldName.nil? and @fieldName == "simpleSubjectURI" %>
