Changed Subject label in object metadata display to Topic. DHH-443

--- a/app/views/shared/fields/_subject.html.erb
+++ b/app/views/shared/fields/_subject.html.erb
@@ -21,7 +21,7 @@
   fieldData.sort!
   if !fieldData.empty?
 
-    htmlOpen %= 'Subject'.pluralize(fieldData.count)
+    htmlOpen %= 'Topic'.pluralize(fieldData.count)
     concat htmlOpen.html_safe
 %>
       <ul class="unstyled">
