Fixing the relatedResource display problem. DHH-364

--- a/app/views/shared/fields/_related_resource.html.erb
+++ b/app/views/shared/fields/_related_resource.html.erb
@@ -49,7 +49,7 @@
 	          				# add link information as value to hashmap
 	          				curr = [relatedResource['description'], relatedResource['uri']]
 							types[relatedResource['type']] = curr
-							needLabel == "true"
+							needLabel = "true"
 						end
 					end
 				end
