--- a/app/views/get_data/get_creator.html.erb
+++ b/app/views/get_data/get_creator.html.erb
@@ -1,8 +1,8 @@
 <%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
 
-<script src="/dc/assets/jquery.js" type="text/javascript"></script>
-<script src="/dc/assets/typeahead.bundle.js" type="text/javascript"></script>
-<script src="/dc/assets/edit.js" type="text/javascript"></script>
+<script src="/assets/jquery.js" type="text/javascript"></script>
+<script src="/assets/typeahead.bundle.js" type="text/javascript"></script>
+<script src="/assets/edit.js" type="text/javascript"></script>
 
 
 <% if !@fieldName.nil? and @fieldName == "creatorURI" %>
