Updating restricted images UI (DHH-428)

--- a/app/views/dams_objects/metadata.html.erb
+++ b/app/views/dams_objects/metadata.html.erb
@@ -34,7 +34,11 @@
       </section>
     </div>
 
-
+    <div class="row-fluid">
+      <section class="dams-metadata span12">
+        <%= render :partial => 'shared/fields/show' %>
+      </section>
+    </div>
 
   </div>
 
