Updating restricted images UI (DHH-428)

--- a/app/views/dams_objects/metadata.html.erb
+++ b/app/views/dams_objects/metadata.html.erb
@@ -27,6 +27,7 @@
              <%= restrictedNotice %>
             </div>
           </div>
+          <div class="simple-object"></div>
         <% end %>
 <%# END RESTRICTED NOTICE %>
 
