Fixing the bookmark problem. DHH-437

--- a/app/views/catalog/_document_header.html.erb
+++ b/app/views/catalog/_document_header.html.erb
@@ -21,11 +21,8 @@
 	<%# TODO... display this as a link, not a button... find test case %>
   <%# bookmark functions for items/docs -%>
   
-  <% if !current_user.nil?%>
-  	<% anon = User.anonymous(request.remote_ip) %>
-  	<% if anon.to_s != 'local' %>
-  		<%= render_index_doc_actions document, :wrapping_class => '' %>
-  	<% end %>
+  <% if !current_user.nil? && current_user.provider != 'anonymous'%>
+  	<%= current_user.provider %>
+ 	<%= render_index_doc_actions document, :wrapping_class => '' %>
   <% end %>
-
 </div>
