--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,10 +62,20 @@
                   <!-- use an image bug to keep the Shibboleth session alive -->
                   <img src="https://a4.ucsd.edu/tritON/imagebug">
                 </li>
+                <li><%= link_to 'Bookmarks', bookmarks_path %></li>
+                <li class="divider">
+                  <!-- use an image bug to keep the Shibboleth session alive -->
+                  <img src="https://a4.ucsd.edu/tritON/imagebug">
+                </li>
                 <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
               </ul>
             </li>
           <% elsif current_user && current_user.provider != 'anonymous'  %>
+            <li><%= link_to 'Bookmarks', bookmarks_path %></li>
+            <li class="divider">
+              <!-- use an image bug to keep the Shibboleth session alive -->
+              <img src="https://a4.ucsd.edu/tritON/imagebug">
+            </li>
             <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
           <% else %>
             <li><%= link_to 'Sign In', new_user_session_path %></li>
