Removing relatedResources info from component display area. DHH-458

--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -33,7 +33,7 @@
 				<%if @document['component_count_isi'] != nil   %>
 					<%= render :partial => 'component_tree' %>
 				<% end %>
-				<%= render :partial => 'related_resources' %>
+				<%#= render :partial => 'related_resources' %>
 			</section>
 		</div>
 
